Create proper Docker build. Clean up App spaghetti.